force-app/main/default/objects/Campaign_Partners__c/Campaign_Partners__c.object-meta.xml
<CustomObject>
    <label>Campaign Partners</label>
    <nameField>
        <displayFormat>CP-{000}</displayFormat>
        <label>Campaign Partners Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>