force-app/main/default/objects/Campaign_Partners__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Partners</relationshipLabel>
    <relationshipName>Campaign_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>