force-app/main/default/objects/Campaign_Partners__c/fields/Products_Donated__c.field-meta.xml
<CustomField>
    <fullName>Products_Donated__c</fullName>
    <label>Products Donated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>