force-app/main/default/objects/Campaign_Partners__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Products_Donated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>